--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -14,6 +14,12 @@ Makes chat messages appear with a smooth animation.
 '''
 #logoFile = "icon.png"
 
+[[mixins]]
+config = "chatanimation.mixins.json"
+
+[[mixins]]
+config = "chatanimation.neoforge.mixins.json"
+
 [[dependencies.chatanimation]]
 modId = "minecraft"
 type = "required"
