--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -9,6 +9,14 @@ architectury {
 
 project.archivesBaseName = rootProject.archivesBaseName + "-forge"
 
+loom {
+	forge {
+		mixinConfigs = [
+			"chatanimation.mixins.json", "chatanimation.forge.mixins.json"
+		]
+	}
+}
+
 configurations {
     common
     shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
@@ -21,7 +29,7 @@ dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
     modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
 
-    //我看mixin里有@Local就就加了这个，Fabric好像自带，Forge没有
+    // only forge, because fabric & neoforge include mixinextras
     compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.3.5"))
     implementation(include("io.github.llamalad7:mixinextras-forge:0.3.5"))
 
