--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ minecraft_version=1.20.4
 enabled_platforms=fabric,forge,neoforge
 yarn_mappings=1.20.4+build.3
 
-archives_base_name=ChatAnimation
+archives_base_name=ChatImpressiveAnimation
 mod_version=1.0
-maven_group=com.wulian.chatanimation
+maven_group=com.wulian.chatimpressiveanimation
 
 architectury_version=11.0.11
 
