--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -12,7 +12,7 @@ project.archivesBaseName = rootProject.archivesBaseName + "-forge"
 loom {
 	forge {
 		mixinConfigs = [
-			"chatanimation.mixins.json", "chatanimation.forge.mixins.json"
+			"chatimpressiveanimation.mixins.json", "chatimpressiveanimation.forge.mixins.json"
 		]
 	}
 }
@@ -40,7 +40,7 @@ dependencies {
 loom {
     forge {
         mixinConfigs = [
-                "chatanimation.mixins.json"
+                "chatimpressiveanimation.mixins.json"
         ]
     }
 }
