--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,4 @@ include("fabric")
 include("forge")
 include("neoforge")
 
-rootProject.name = "ChatAnimation"
+rootProject.name = "ChatImpressiveAnimation"
