prepare update part1

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,11 @@ archives_base_name=ChatImpressiveAnimation
 mod_version=1.0
 maven_group=com.wulian.chatimpressiveanimation
 
-architectury_version=11.0.11
+architectury_version=11.1.17
 
-fabric_loader_version=0.15.6
-fabric_api_version=0.95.4+1.20.4
+fabric_loader_version=0.16.0
+fabric_api_version=0.97.1+1.20.4
 
-forge_version=1.20.4-49.0.30
+forge_version=1.20.4-49.1.4
 
-neoforge_version=20.4.160-beta
+neoforge_version=20.4.237
