--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -23,7 +23,7 @@ config = "chatimpressiveanimation.neoforge.mixins.json"
 [[dependencies.chatimpressiveanimation]]
 modId = "minecraft"
 type = "required"
-versionRange = "[1.20.1,)"
+versionRange = "[1.20.2,1.20.4]"
 ordering = "NONE"
 side = "BOTH"
 
