--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.5-SNAPSHOT" apply false
+    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
+    id "io.github.pacifistmc.forgix" version "1.+"
+    id "com.github.johnrengelman.shadow" version "8.+" apply false
 }
 
 architectury {
@@ -9,6 +11,7 @@ architectury {
 
 subprojects {
     apply plugin: "dev.architectury.loom"
+    apply plugin: "com.github.johnrengelman.shadow"
 
     dependencies {
         minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
@@ -26,11 +29,6 @@ allprojects {
     group = rootProject.maven_group
 
     repositories {
-        // Add repositories to retrieve artifacts from in here.
-        // You should only use this when depending on other mods because
-        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
-        // for more information about repositories.
     }
 
     tasks.withType(JavaCompile) {
@@ -41,4 +39,27 @@ allprojects {
     java {
         withSourcesJar()
     }
+
+forgix {
+    group = rootProject.maven_group
+    mergedJarName = "${rootProject.archives_base_name}-${rootProject.version}.jar"
+    outputDir = "build/libs/forgix"
+
+    forge {
+        projectName = "forge"
+        jarLocation = "build/libs/${rootProject.archives_base_name}-forge-${rootProject.version}.jar"
+    }
+
+    fabric {
+        projectName = "fabric"
+        jarLocation = "build/libs/${rootProject.archives_base_name}-fabric-${rootProject.version}.jar"
+    }
+
+    custom {
+        projectName = "neoforge"
+        jarLocation = "build/libs/${rootProject.archives_base_name}-neoforge-${ rootProject.version }.jar"
+    }
+}
+
+mergeJars.dependsOn(build)
 }
