--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -24,7 +24,7 @@ logoFile = "icon.png"
 [[dependencies.chatimpressiveanimation]]
     modId = "minecraft"
     mandatory = true
-    versionRange = "[1.19,)"
+    versionRange = "[1.20,1.20.4]"
     ordering = "NONE"
     side = "BOTH"
 
