--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
+	modApi "me.shedaniel.cloth:cloth-config:${rootProject.clothconfig_version}"
 
 	compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.0"))
 }
@@ -19,8 +20,6 @@ publishing {
         }
     }
 
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-        // Add repositories to publish to here.
     }
 }
