--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -17,6 +17,11 @@ configurations {
     developmentFabric.extendsFrom common
 }
 
+repositories {
+	maven { url "https://maven.terraformersmc.com/releases/" }
+	maven { url "https://maven.nucleoid.xyz/" }
+}
+
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
@@ -25,6 +30,10 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
+
+	modApi "me.shedaniel.cloth:cloth-config-fabric:${rootProject.clothconfig_version}"
+	modApi "com.terraformersmc:modmenu:${rootProject.modmenu_version}"
+	modApi "eu.pb4:placeholder-api:${rootProject.placeholder_api_version}"
 }
 
 processResources {
@@ -72,8 +81,6 @@ publishing {
         }
     }
 
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-        // Add repositories to publish to here.
     }
 }
