--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -10,7 +10,7 @@ displayName = "Chat Impressive Animation"
 displayURL = "https://github.com/Wulian233/Chat-Impressive-Animation"
 authors = "Wulian233, TexTrue"
 description = '''
-Makes chat messages appear with a smooth animation.
+This mod makes the chat look better by adding animations. Such as opening chat, sending messages. It also removes the message indicator.
 '''
 logoFile = "icon.png"
 
@@ -23,12 +23,19 @@ config = "chatimpressiveanimation.neoforge.mixins.json"
 [[dependencies.chatimpressiveanimation]]
 modId = "minecraft"
 type = "required"
-versionRange = "[1.20.2,1.20.4]"
+versionRange = "[1.20.1,1.20.4]"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.chatimpressiveanimation]]
 modId = "architectury"
+type = "required"
+versionRange = "*"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.chatimpressiveanimation]]
+modId = "cloth_config"
 type = "required"
 versionRange = "*"
 ordering = "AFTER"
