--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,16 +4,16 @@ on: [ pull_request, push, workflow_dispatch ]
 
 jobs:
   Build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: 17
+          java-version: 21
       - name: Cache
         uses: actions/cache@v4
         with:
@@ -30,28 +30,28 @@ jobs:
       - name: Merge Fabric & Forge & NeoForge JARs
         run: |
           chmod +x gradlew
-          ./gradlew mergeJars
+          ./gradlew fusejars
 
-      - name: Upload artifacts (fabric)
+      - name: Upload fabric artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: fabric
+          name: fabric-artifacts
           path: ${{ github.workspace }}/fabric/build/libs
 
-      - name: Upload artifacts (forge)
+      - name: Upload forge artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: forge
+          name: neoforge-artifacts
           path: ${{ github.workspace }}/forge/build/libs
 
-      - name: Upload artifacts (neoforge)
+      - name: Upload neoforge artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: neoforge
+          name: neoforge-artifacts
           path: ${{ github.workspace }}/neoforge/build/libs
 
-      - name: Upload artifacts (Forgix merged jar)
+      - name: Upload merged artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: merged
-          path: ${{ github.workspace }}/build/libs/forgix
+          name: merged-artifacts
+          path: ${{ github.workspace }}/build/merged/*
