--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -21,9 +21,16 @@ config = "chatimpressiveanimation.mixins.json"
 config = "chatimpressiveanimation.neoforge.mixins.json"
 
 [[dependencies.chatimpressiveanimation]]
+modId = "neoforge"
+type = "required"
+versionRange = "[1,20.5)"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.chatimpressiveanimation]]
 modId = "minecraft"
 type = "required"
-versionRange = "[1.20.1,1.20.4]"
+versionRange = "[1.20.3,1.20.4]"
 ordering = "NONE"
 side = "BOTH"
 
