--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: 21
+          java-version: 17
       - name: Cache
         uses: actions/cache@v4
         with:
@@ -41,7 +41,7 @@ jobs:
       - name: Upload forge artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: neoforge-artifacts
+          name: forge-artifacts
           path: ${{ github.workspace }}/forge/build/libs
 
       - name: Upload neoforge artifacts
