--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           chmod +x gradlew
           ./gradlew build
 
-      - name: Merge Fabric & Forge & NeoForge JARs
+      - name: Merge Fabric & NeoForge JARs
         run: |
           chmod +x gradlew
           ./gradlew fusejars
@@ -37,12 +37,6 @@ jobs:
         with:
           name: fabric-artifacts
           path: ${{ github.workspace }}/fabric/build/libs
-
-      - name: Upload forge artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: forge-artifacts
-          path: ${{ github.workspace }}/forge/build/libs
 
       - name: Upload neoforge artifacts
         uses: actions/upload-artifact@v4
