--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2048M
 
 minecraft_version=1.20.6
-enabled_platforms=fabric,forge,neoforge
+enabled_platforms=fabric,neoforge
 yarn_mappings=1.20.6+build.3
 
 archives_base_name=ChatImpressiveAnimation
@@ -13,9 +13,7 @@ modmenu_version=10.0.0
 placeholder_api_version=2.4.0-pre.1+1.20.5
 clothconfig_version=14.0.139
 
-fabric_loader_version=0.16.6
+fabric_loader_version=0.16.7
 fabric_api_version=0.100.8+1.20.6
-
-forge_version=1.20.6-50.1.20
 
 neoforge_version=20.6.121
