--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.20.6
+minecraft_version=1.21.1
 enabled_platforms=fabric,neoforge
-yarn_mappings=1.20.6+build.3
+yarn_mappings=1.21.1+build.3
 
 archives_base_name=ChatImpressiveAnimation
 mod_version=1.1.0
 maven_group=com.wulian.chatimpressiveanimation
 
-architectury_version=12.1.4
-modmenu_version=10.0.0
-placeholder_api_version=2.4.0-pre.1+1.20.5
-clothconfig_version=14.0.139
+architectury_version=13.0.6
+modmenu_version=11.0.2
+placeholder_api_version=2.4.1+1.21.1
+clothconfig_version=15.0.140
 
 fabric_loader_version=0.16.7
-fabric_api_version=0.100.8+1.20.6
+fabric_api_version=0.105.0+1.21.1
 
-neoforge_version=20.6.121
+neoforge_version=21.1.68
