--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.jvmargs=-Xmx2048M
 minecraft_version=1.21.1
 enabled_platforms=fabric,neoforge
 yarn_mappings=1.21.1+build.3
+yarn_patch=1.21+build.4
 
 archives_base_name=ChatImpressiveAnimation
 mod_version=1.1.0
