--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,10 @@ subprojects {
 
     dependencies {
         minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
-        mappings "net.fabricmc:yarn:${rootProject.yarn_mappings}:v2"
+        mappings loom.layered {
+            mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+            mappings "dev.architectury:yarn-mappings-patch-neoforge:${project.yarn_patch}"
+        }
     }
 }
 
