--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.21.1
+minecraft_version=1.21.4
 enabled_platforms=fabric,neoforge
-yarn_mappings=1.21.1+build.3
+yarn_mappings=1.21.4+build.1
 yarn_patch=1.21+build.4
 
 archives_base_name=ChatImpressiveAnimation
-mod_version=1.2.0
+mod_version=1.2.1
 maven_group=com.wulian.chatimpressiveanimation
 
-architectury_version=13.0.6
-clothconfig_version=15.0.140
+architectury_version=15.0.1
+clothconfig_version=17.0.142
 
-fabric_loader_version=0.16.7
-fabric_api_version=0.105.0+1.21.1
+fabric_loader_version=0.16.9
+fabric_api_version=0.111.0+1.21.4
 
-neoforge_version=21.1.68
+neoforge_version=21.4.10-beta
